some ux changes and now Stories get shown instead of Comics

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Fauna+One&family=Lato&family=Nunito&family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
     
-    <title>React App</title>
+    <title>Choose Your Hero!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
